--- a/codequiz-server/quiz/templates/index.html
+++ b/codequiz-server/quiz/templates/index.html
@@ -1,19 +1,19 @@
 <div style="background-color:#ffffff; padding:1em; margin:1em; width:50%">
     <p style="font-size: 1.2em; text-align: justify; padding:10%">
-CodeQuiz ist eine Webplattform für interaktive Quizfragen. Sie ist spezialisiert auf Fragen bzw. Aufgaben mit Quelltext-Bezug.
-Die aktuell verfügbaren Inhalte sind Verständnisfragen im Rahmen der Blended Learning-Lehr&shy;veranstaltung
-"Anwendungsorientierter Python&shy;kurs für Ingenieure" [1] an der TU Dresden und der TU Bergakademie Freiberg.
-Der Kurs wird durch das Hochschuldidaktische Zentrum Sachsen (HDS) im Rahmen des Projekts "Lehrpraxis im Transfer" [2] gefördert. 
+        CodeQuiz ist eine Webplattform für interaktive Quizfragen. Sie ist spezialisiert auf Fragen bzw. Aufgaben mit
+        Quelltext-Bezug.
+        Die aktuell verfügbaren Inhalte sind Verständnisfragen im Rahmen der Blended Learning-Lehr&shy;veranstaltung
+        "Anwendungsorientierter Python&shy;kurs für Ingenieure" [1] an der TU Dresden und der TU Bergakademie Freiberg.
+        Der Kurs wird durch das Hochschuldidaktische Zentrum Sachsen (HDS) im Rahmen des Projekts "Lehrpraxis im
+        Transfer" [2] gefördert.
 
-<br>
-<br>
-[1] <a title="http://tu-dresden.de/pythonkurs" href="http://tu-dresden.de/pythonkurs">http://tu-dresden.de/pythonkurs</a></li>
-<br>
-<br>
-[2] <a title="HDS" href="https://www.hds.uni-leipzig.de/index.php?id=179">HDS/Lehrpraxis im Transfer</a></li>
-<br>
-<br>
-
-
-</p>
+        <br/>
+        <br/>
+        [1] <a title="http://tu-dresden.de/pythonkurs" href="http://tu-dresden.de/pythonkurs">http://tu-dresden.de/pythonkurs</a>
+        <br/>
+        <br/>
+        [2] <a title="HDS" href="https://www.hds.uni-leipzig.de/index.php?id=179">HDS/Lehrpraxis im Transfer</a>
+        <br/>
+        <br/>
+    </p>
 </div>
