--- a/codequiz-server/quiz/templates/tasks/cq3_description_cells.html
+++ b/codequiz-server/quiz/templates/tasks/cq3_description_cells.html
@@ -1,7 +1,7 @@
 <!-- ==> start: cq3_description_cells.html -->
 {% for cell in cells %}
     <div class="grid_5">
-        {% if cell.type = "source" %}
+        {% if cell.type == "source" %}
             <pre class="src">{{ cell.content }}</pre>
         {% else %}
             <span class="normal">{{ cell.content }}</span>
