--- a/codequiz-server/quiz/templates/tasks/cq2_input_field.html
+++ b/codequiz-server/quiz/templates/tasks/cq2_input_field.html
@@ -10,14 +10,14 @@
         <span class="normal">{{ text_slots.0.content|safe }}</span>
     {% endif %}
 </div>
-<div class="input_field grid_4{% if not print_solution %} suffix_4 omega{% endif %}">
+<div class="input_field grid_4{% if not print_feedback %} suffix_4 omega{% endif %}">
     <textarea class="disablecopypaste {{ answer_class }}" style="width: 100%" name="answer_{{ idx }}" rows="{{ lines }}"
               autocomplete="off">{{ prefilled_text }}</textarea>
 </div>
 
-{% if print_solution %}
+{% if print_feedback %}
     <div class="grid_4 omega">
-        <pre class="{{ css_class }} {{ solution_class }}">{{ printed_solution }}</pre>
+        <pre class="{{ css_class }} {{ solution_class }}">{% if print_solution %}{{ printed_solution }}{% else %}&nbsp;{% endif %}</pre>
     </div>
 {% endif %}
 
