--- a/codequiz-server/quiz/templates/tasks/cq2_input_field.html
+++ b/codequiz-server/quiz/templates/tasks/cq2_input_field.html
@@ -17,7 +17,13 @@
 
 {% if print_feedback %}
     <div class="grid_4 omega">
-        <pre class="{{ css_class }} {{ solution_class }}">{% if print_solution %}{{ printed_solution }}{% else %}&nbsp;{% endif %}</pre>
+        {% if print_solution %}
+            <pre class="{{ css_class }} {{ solution_class }}">{{ printed_solution }}</pre>
+        {% else %}
+            <span style="color: red">
+                <i class="fa {% if css_class == 'sol_wrong' %}fa-times{% else %}fa-thumbs-o-up{% endif %} {{ css_class }}"></i>
+            </span>
+        {% endif %}
     </div>
 {% endif %}
 
