--- a/codequiz-server/quiz/templates/tasks/z_cq1_task_content.html
+++ b/codequiz-server/quiz/templates/tasks/z_cq1_task_content.html
@@ -27,7 +27,7 @@
     {% endfor %}
 
     <!-- Buttons: -->
-    <span style="display: block; text-align: right;">
+    <span style="display: block; text-align: right; position: relative; bottom:0px; right:10px;">
         {% for bs in mb.button_strings %}
             {{ bs|safe }}
         {% endfor %}
