Handle direct URL entry points (with no POST data)
/quiz/test/run/ now continues a running session
/quiz/test/result/ is disallowed
Discard some of the old url patterns

Remove quite some dead code

--- a/codequiz-server/quiz/templates/tasks/task_collection.html
+++ b/codequiz-server/quiz/templates/tasks/task_collection.html
@@ -25,7 +25,7 @@
             {% endfor %}
         </div>
         <br/>
-        <form action="{% url 'quiz_ns:tc_run_view2' %}" method="post" autocomplete="off">
+        <form action="{% url 'quiz_ns:tc_run_view' %}" method="post" autocomplete="off">
         {% csrf_token %}
         <input type="hidden" name="meta_tc_id" value="{{tc.id}}">
         {# this is before the first task -> 0 #}
