--- a/codequiz-server/quiz/templates/tasks/z_cq1_task_content.html
+++ b/codequiz-server/quiz/templates/tasks/z_cq1_task_content.html
@@ -1,33 +1,23 @@
 <!-- content of one single task  -->
 
-{# This debug stuff should be removed with version 0.4 (xml dismissed) #}
+<form action="{% url 'quiz_ns:tc_run_view' %}" method="post" autocomplete="off">
 
-<form action="
-        {% if mb.tc_run_flag %}
-        {% url 'quiz_ns:tc_run_view2' %}
-        {% elif mb.debug_flag %}
-        {% url 'quiz_ns:debug_task_process' %}
-        {% else %} {# old url !! to be removed #}
-        {% url 'quiz_ns:task_form_process' mb.task.id %}
-        {% endif %}"
-      method="post" autocomplete="off">
+<!-- protect against cross site reference forgery -->
+{% csrf_token %}
 
-    <!-- protect against cross site reference forgery -->
-    {% csrf_token %}
+<input type="hidden" name="meta_task_id" value="{{ mb.task.id }}">
+<input type="hidden" name="meta_tc_id" value="{{ mb.tc_id }}">
+<input type="hidden" name="meta_tc_task_id" value="{{ mb.tc_task_id }}">
 
-    <input type="hidden" name="meta_task_id" value="{{ mb.task.id }}">
-    <input type="hidden" name="meta_tc_id" value="{{ mb.tc_id }}">
-    <input type="hidden" name="meta_tc_task_id" value="{{ mb.tc_task_id }}">
+<h2><span class="color1">Task:</span> "{{ mb.task.title }}"</h2>
 
-    <h2><span class="color1">Task:</span> "{{ mb.task.title }}"</h2>
+{% for s in mb.html_strings %}
+    {{ s|safe }}
+    {#        <div class="clear"></div>#}
+{% endfor %}
 
-    {% for s in mb.html_strings %}
-        {{ s|safe }}
-{#        <div class="clear"></div>#}
-    {% endfor %}
-
-    <!-- Buttons: -->
-    <span style="display: block; text-align: right; position: relative; bottom:0px; right:10px;">
+<!-- Buttons: -->
+<span style="display: block; text-align: right; position: relative; bottom:0px; right:10px;">
         {% for bs in mb.button_strings %}
             {{ bs|safe }}
         {% endfor %}
