No next button in explicit mode, no Result button in "hard" exam mode
More checks for existence of POST values and/or attributes of Task object attributes
Redirects for illegal access to URLs without going through the test
Accessor method for ordered Task list of TaskCollection, no need to know about ordering key in views.py
Since ordered task list is a normal array with 0 based indexing,
  - the task_collection.html template now sends "-1" to start the test
  - the progress template uses less than or equal comparison
Remove a redundancy for aux_get_json_task()
Bug fixes

--- a/codequiz-server/quiz/templates/tasks/task_collection.html
+++ b/codequiz-server/quiz/templates/tasks/task_collection.html
@@ -28,8 +28,8 @@
         <form action="{% url 'quiz_ns:tc_run_view' %}" method="post" autocomplete="off">
         {% csrf_token %}
         <input type="hidden" name="meta_tc_id" value="{{tc.id}}">
-        {# this is before the first task -> 0 #}
-        <input type="hidden" name="meta_tc_task_id" value="0">
+
+        <input type="hidden" name="meta_tc_task_id" value="-1"> {# this is before the first task -> 0 #}
 
         <button type="submit" class="button" name="button_next" style="width:200pt">
                 Start Task Collection <i class="fa fa-caret-right fa-2x pull-right"></i>
