landing page update Feature-List (in german)

--- a/codequiz-server/quiz/templates/index.html
+++ b/codequiz-server/quiz/templates/index.html
@@ -1,13 +1,36 @@
 <div style="background-color:#ffffff; padding:1em; margin:1em; width:50%">
-    <p style="font-size: 1.2em; text-align: justify; padding:10%">
-        CodeQuiz ist eine Webplattform für interaktive Quizfragen. Sie ist spezialisiert auf Fragen bzw. Aufgaben mit
-        Quelltext-Bezug.
-        Die aktuell verfügbaren Inhalte sind Verständnisfragen im Rahmen der Blended Learning-Lehr&shy;veranstaltung
-        "Anwendungsorientierter Python&shy;kurs für Ingenieure" [1] an der TU Dresden und der TU Bergakademie Freiberg.
-        Der Kurs wird durch das Hochschuldidaktische Zentrum Sachsen (HDS) im Rahmen des Projekts "Lehrpraxis im
-        Transfer" [2] gefördert.
-
+    <div style="font-size: 1.2em; text-align: justify; padding-top:4%;padding-left:10%; padding-right:10%">
+        CodeQuiz ist eine Webapplikation für interaktive Quizfragen. Sie ist spezialisiert auf Fragen bzw. Aufgaben mit
+        Quelltext- und Mathematik-Bezug. Sie wurde im Rahmen der Blended Learning-Lehr&shy;veranstaltung
+        "Anwendungsorientierter Python&shy;kurs für Ingenieure" [1] mit Unterstützung durch das Hochschuldidaktische Zentrum Sachsen (HDS) [2] geschaffen und wird nach aktuellem Bedarf weiterentwickelt.
         <br/>
+        <br/>
+        Features:
+        <br/>
+       
+        <ul style="font-size: 1.0em; padding-left:10%;">
+        <li>
+        Quelltext-kompatible Formatierung (z.B. Erhaltung von Ein&shy;rückungen) in Auf&shy;gaben&shy;stellung und Lösung 
+        </li>
+        <li>
+        Ergänzung/Berichtigung vorgegebener Lösungsfragmente ("Lücken&shy;quelltext")
+        </li>
+        <li>
+        Mehrere als korrekt gewertete Lösungen möglich
+        </li>
+        <li>
+        Drei Modi zur Lösungsanzeige: Musterlösung, binäres Ergebnis (richtig/falsch), oder keine Ergebnisinformation
+        </li>
+        <li>
+        Optionale Einblendung von Zusatzinformation nach Auf&shy;gaben&shy;bearbeitung
+        </li>
+        <li>
+        \(\rm\LaTeX\)-Unterstützung (via <a title="http://www.mathjax.org/" href="http://www.mathjax.org/">mathjax</a>)
+        </li>
+        <li>
+        Text-basiertes Aufgabenformat (→ Versionsverwaltung möglich)
+        </li>
+        </ul>
         <br/>
         [1] <a title="http://tu-dresden.de/pythonkurs" href="http://tu-dresden.de/pythonkurs">http://tu-dresden.de/pythonkurs</a>
         <br/>
@@ -15,5 +38,6 @@
         [2] <a title="HDS" href="https://www.hds.uni-leipzig.de/index.php?id=179">HDS/Lehrpraxis im Transfer</a>
         <br/>
         <br/>
-    </p>
+        </div>
+    
 </div>
