Make gaptext work again + handle gaptext solutions
- Introduce a new nesting-level ("parts") in solutions
- Introduce an own class for solutions
- Implement separat rendering and solution-handling methods in GapText
- adapted views and style2.css
- small comment-fix in gaptext.html template

--- a/codequiz-server/quiz/static/tasks/style2.css
+++ b/codequiz-server/quiz/static/tasks/style2.css
@@ -248,6 +248,14 @@ input.gap {
     box-shadow: none !important;
 }
 
+input.gap.gap_right {
+    background-color: #99ff99;
+}
+
+input.gap.gap_wrong {
+    background-color: #ff9999;
+}
+
 /* no glowing outline, when editing */
 input.gap:focus {
     outline: none;
