--- a/codequiz-server/quiz/templates/tasks/gaptext.html
+++ b/codequiz-server/quiz/templates/tasks/gaptext.html
@@ -1,4 +1,4 @@
-<!-- ==> start: txt.html -->
+<!-- ==> start: gaptxt.html -->
 
 <div class="grid_12 alpha omega" style="padding: 0.5em 0px">
 
@@ -6,4 +6,4 @@
 
 </div>
 <div class="clear"></div>
-<!-- ==> end: txt.html -->
+<!-- ==> end: gaptxt.html -->
