some template changes for debugging

--- a/codequiz-server/quiz/templates/index.html
+++ b/codequiz-server/quiz/templates/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <div style="background-color:#ffffff; padding:1em; margin:1em; width:50%">
     <p style="font-size: 1.2em; text-align: justify; padding:10%">
         CodeQuiz ist eine Webplattform für interaktive Quizfragen. Sie ist spezialisiert auf Fragen bzw. Aufgaben mit
