--- a/codequiz-server/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_base.html
@@ -1,8 +1,14 @@
+<!--cq0_main_base.html -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 {# This template is the base for all top level templates which provide a view of a task #}
 {# it operates with ++ blocks ++ #}
+
+<!--template_comment: static:{{ STATIC_URL }}|-->
+{% block template_comment %}
+<!--cq0_main_base.html (not overwritten) -->
+{% endblock %}
 
 <head>
     <title>Code Quiz</title>
