--- a/codequiz-server/quiz/templates/tasks/cq0_main_simple.html
+++ b/codequiz-server/quiz/templates/tasks/cq0_main_simple.html
@@ -1,7 +1,10 @@
 {% extends "tasks/cq0_main_base.html" %}
 {# This template is used to render a task independed of a task_collection #}
 
-<!-- begin cq0_main_simple.html  -->
+
+{% block template_comment %}
+<!-- begin cq0_main_simple.html  static:{{ STATIC_URL }}| -->
+{% endblock template_comment %}
 
 {% block main_left %}
     {% include "tasks/z_cq1_task_content.html" with mb=main_block %}
