part 5: delete references to apps `ratings` and `feedback` from templates

--- a/codequiz-server/apps/quiz/templates/tasks/cq0_main.html
+++ b/codequiz-server/apps/quiz/templates/tasks/cq0_main.html
@@ -24,7 +24,7 @@
 
 {#  TODO: Add Font Awesome here, after merging the other branches#}
 
-    {% include "feedback/header.html" %}  {# to make the feedback form ajaxy #}
+    <!--{ % include "feedback/header.html" %}  {# to make the feedback form ajaxy #}-->
     {% load mathjax %}
     {% mathjax_scripts %}
 </head>
