--- a/codequiz-server/apps/quiz/templates/tasks/cq0_main_base.html
+++ b/codequiz-server/apps/quiz/templates/tasks/cq0_main_base.html
@@ -33,7 +33,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}font-awesome/css/font-awesome.min.css"/>
 
-    {% include "feedback/header.html" %} {# to make the feedback form ajaxy #}
+    <!--{ % include "feedback/header.html" %} {# to make the feedback form ajaxy #}-->
     {% load mathjax %}
     {% mathjax_scripts %}
 </head>
