--- a/apps/quiz/templates/tasks/task_collection.html
+++ b/apps/quiz/templates/tasks/task_collection.html
@@ -1,5 +1,5 @@
 <!-- ==> start: task_collection.html -->
-{% load staticfiles %}
+{% load static %}
 
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/style2.css?{% now "U" %}"/>
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/tabular_style.css"/>
