--- a/apps/quiz/templates/tasks/tc_run_final.html
+++ b/apps/quiz/templates/tasks/tc_run_final.html
@@ -1,5 +1,5 @@
 <!-- ==> start: tc_run_final.html -->
-{% load staticfiles %}
+{% load static %}
 
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/style2.css?{% now "U" %}"/>
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}font-awesome/css/font-awesome.min.css"/>
