--- a/apps/quiz/templates/tasks/cq0_main.html
+++ b/apps/quiz/templates/tasks/cq0_main.html
@@ -6,7 +6,7 @@
     <title>Code Quiz2</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    {% load staticfiles %}
+    {% load static %}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/style2.css"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/tabular_style.css"/>
 
