--- a/apps/quiz/templates/tasks/cq0_main_base.html
+++ b/apps/quiz/templates/tasks/cq0_main_base.html
@@ -14,7 +14,7 @@
     <title>Code Quiz</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    {% load staticfiles %}
+    {% load static %}
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/tabular_style.css?{% now "U" %}"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/1152_16_col.css?{% now "U" %}"/>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}tasks/style2.css?{% now "U" %}"/>
