--- a/apps/quiz/templates/tasks/cq0_main_base.html
+++ b/apps/quiz/templates/tasks/cq0_main_base.html
@@ -95,6 +95,13 @@
             </div>
         {% endblock %}
         <div id="footer_right">
+            {% if user.is_authenticated %}
+                <a href="/admin/logout">logout</a>
+            {% endif %}
+            {% if user.is_authenticated and user.is_staff %}
+                <br>
+                <a href="{% url 'quiz:download_backup_fixtures' %}">download backup</a>
+            {% endif %}
 
         </div>
     </div>
