templates/admin/base_site.html: insert download backup data link in footer

--- a/apps/quiz/templates/tasks/cq0_main_base.html
+++ b/apps/quiz/templates/tasks/cq0_main_base.html
@@ -106,7 +106,7 @@
             {% endif %}
             {% if user.is_authenticated and user.is_staff %}
                 <br>
-                <a href="{% url 'quiz:download_backup_fixtures' %}">download backup</a>
+                <a href="{% url 'quiz:download_backup_fixtures' %}">download data backup</a>
             {% endif %}
 
         </div>
