--- a/apps/quiz/static/tasks/style2.css
+++ b/apps/quiz/static/tasks/style2.css
@@ -13,11 +13,17 @@ img {
 }
 
 .centered {
-    position: absolute;
+   /* position: absolute;*/
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2em;
+}
+
+.general_content {
+    margin-bottom: 2em;
+    width: 400px;
 }
 
 .small {
