tc_run_final.html: display result_data str on final page

--- a/apps/quiz/static/tasks/style2.css
+++ b/apps/quiz/static/tasks/style2.css
@@ -20,6 +20,12 @@ img {
     margin-right: auto;
     margin-bottom: 2em;
 }
+.result_data {
+
+    font-family: "monospace";
+    padding: 1em;
+    background-color: #EEE;
+}
 
 .general_content {
     margin-bottom: 2em;
