--- a/apps/quiz/templates/tasks/cq0_main_base.html
+++ b/apps/quiz/templates/tasks/cq0_main_base.html
@@ -53,7 +53,7 @@
     {% block header %}
         <div id="header_container">
             <div class="grid_10" id="header_left">
-                <h1>Code<span class="color1">Quiz</span> <span id="css_version">beta 0.4</span></h1>
+                <h1>Code<span class="color1">Quiz</span> <span id="css_version">{{SETTINGS_VERSION}}</span></h1>
             </div>
             <div class="grid_6" id="header_right">
                 <ul>
