--- a/apps/quiz/templates/tasks/cq0_main_base.html
+++ b/apps/quiz/templates/tasks/cq0_main_base.html
@@ -108,7 +108,7 @@
             {% endif %}
             {% if user.is_authenticated and user.is_staff %}
                 <br>
-                <a href="{% url 'quiz:download_backup_fixtures' %}">download data backup</a>
+                <a href="{% url 'quiz:download_backup_fixtures' %}">download data backup</a> (login feature)
             {% endif %}
 
         </div>
