--- a/apps/quiz/templates/tasks/tc_run_final.html
+++ b/apps/quiz/templates/tasks/tc_run_final.html
@@ -7,8 +7,8 @@
 <!-- ==> start: tc_run_final.html (main block)-->
 <div class="centered " style="width:500px">
     <h1>Test finished!</h1>
-    <p>You completed the test "{{ tc.title }}" with {{ tc.number_of_tasks }} tasks.</p>
-    <p>You achieved <b>{{ percentage }}&#37;</b> of possible scores. <br>The following string encodes your detailed test result:<br></p>
+    <p>You completed the test "{{ tc.title }}".</p>
+    <p>You correctly answered <b>{{ percentage }}&#37;</b> of {{ tc.number_of_tasks }} tasks (with {{ percentage_segments }} &#37; correct sub-tasks). <br>The following string encodes your detailed test result:<br></p>
 
     <div class="result_data">
     {{ result_data }}
