--- a/apps/quiz/templates/tasks/tc_run_final.html
+++ b/apps/quiz/templates/tasks/tc_run_final.html
@@ -11,10 +11,14 @@
     <p>You correctly answered <b>{{ percentage }}&#37;</b> of {{ tc.number_of_tasks }} tasks (with {{ percentage_segments }} &#37; correct sub-tasks). <br>The following string encodes your detailed test result:<br></p>
 
     <div class="result_data">
-    {{ result_data }}
+        <div id="result_data_content">
+        {{ result_data }}
+        </div>
+        <div class="copy_button">
+            <img src="{% static '/img/copy-icon.svg' %}" width="15px" title="copy result data to clipboard">
+            <br>
+        </div>
     </div>
-
-
 </div>
 
 <!-- ==> end: tc_run_final.html -->
