--- a/apps/quiz/templates/tasks/tc_run_final.html
+++ b/apps/quiz/templates/tasks/tc_run_final.html
@@ -14,12 +14,33 @@
         <div id="result_data_content">
         {{ result_data }}
         </div>
-        <div class="copy_button">
+        <div id="copy_button" class="copy_button">
             <img src="{% static '/img/copy-icon.svg' %}" width="15px" title="copy result data to clipboard">
             <br>
         </div>
     </div>
 </div>
+
+<script>
+    const content_field = document.getElementById('result_data_content');
+    const copy_button = document.getElementById('copy_button');
+    const textToCopy = content_field.textContent.trim();
+
+    /*
+    copy_button.addEventListener('click', () => {
+        console.log(textToCopy);
+    });
+    */
+
+    copy_button.addEventListener('click', () => {
+        navigator.clipboard.writeText(textToCopy)
+            .then(() => console.log('Text copied to clipboard'))
+            .catch((err) => console.error('Error copying text: ', err));
+    });
+
+</script>
+
+
 
 <!-- ==> end: tc_run_final.html -->
 {% endblock %}
