--- a/apps/quiz/templates/tasks/cq0_main_base.html
+++ b/apps/quiz/templates/tasks/cq0_main_base.html
@@ -50,69 +50,72 @@
 
 
 <div class="container_16">
-    {% block header %}
-        <div id="header_container">
-            <div class="grid_10" id="header_left">
-                <h1>Code<span class="color1">Quiz</span> <span id="css_version">{{SETTINGS_VERSION}}</span></h1>
-            </div>
-            <div class="grid_6" id="header_right">
-                <ul>
-                    <li><a title="home" href="{% url 'quiz_ns:index' %}"><i class="fa fa-home"></i> home</a></li>
-                    <li>|</li>
-                    <li><a class="active" title="quiz" href="{% url 'quiz_ns:task_collection_view' 1 %}">quiz</a></li>
-                    <li>|</li>
-                    <li><a title="admin" href="{% url 'admin:index' %}">admin</a></li>
-                    <li>|</li>
-                    <li><a title="admin" href="{% url 'quiz_ns:about' %}">about</a></li>
-                </ul>
-            </div>
-            <div class="clear"></div>
-        </div>
-    {% endblock %}
-
-    <div id="main_container">
-        {% block main %}
-            <div class="grid_12" style="position: relative;">
-                {% block main_left %}
-
-                    Main content
-
-                {% endblock %}
-            </div>
-
-            <!-- End of main_left -->
-
-            <div class="grid_4">
-                {% block main_right %}
-                    content of right column
-                {% endblock %}
-            </div>
-            <div class="clear"></div>
-
-            <!-- End of main_right -->
-        {% endblock %}
-    </div>
-
-    <div id="footer_container">
-        <div id="footer_left">
-            <p><a title="back to top" href="#"><i class="fa fa-arrow-circle-up"></i> back to top</a></p>
-        </div>
-        {% block progress %}
-            <div style="position: relative; top: 12px; left:25%; width: 50%">
-                {% include "tasks/z_cq1_taskcollection_progress.html" %}
+    <main class="fullheight">
+        {% block header %}
+            <div id="header_container">
+                <div class="grid_10" id="header_left">
+                    <h1>Code<span class="color1">Quiz</span> <span id="css_version">{{SETTINGS_VERSION}}</span></h1>
+                </div>
+                <div class="grid_6" id="header_right">
+                    <ul>
+                        <li><a title="home" href="{% url 'quiz_ns:index' %}"><i class="fa fa-home"></i> home</a></li>
+                        <li>|</li>
+                        <li><a class="active" title="quiz" href="{% url 'quiz_ns:task_collection_view' 1 %}">quiz</a></li>
+                        <li>|</li>
+                        <li><a title="admin" href="{% url 'admin:index' %}">admin</a></li>
+                        <li>|</li>
+                        <li><a title="admin" href="{% url 'quiz_ns:about' %}">about</a></li>
+                    </ul>
+                </div>
+                <div class="clear"></div>
             </div>
         {% endblock %}
-        <div id="footer_right">
-            {% if user.is_authenticated %}
-                <a href="/admin/logout">logout</a>
-            {% endif %}
-            {% if user.is_authenticated and user.is_staff %}
-                <br>
-                <a href="{% url 'quiz:download_backup_fixtures' %}">download data backup</a> (login feature)
-            {% endif %}
 
+        <div id="main_container">
+            {% block main %}
+                <div class="grid_12" style="position: relative;">
+                    {% block main_left %}
+
+                        Main content
+
+                    {% endblock %}
+                </div>
+
+                <!-- End of main_left -->
+
+                <div class="grid_4">
+                    {% block main_right %}
+                        content of right column
+                    {% endblock %}
+                </div>
+                <div class="clear"></div>
+
+                <!-- End of main_right -->
+            {% endblock %}
         </div>
-    </div>
+    </main>
+    <footer>
+        <div id="footer_container">
+            <div id="footer_left">
+                <p><a title="back to top" href="#"><i class="fa fa-arrow-circle-up"></i> back to top</a></p>
+            </div>
+            {% block progress %}
+                <div style="position: relative; top: 12px; left:25%; width: 50%">
+                    {% include "tasks/z_cq1_taskcollection_progress.html" %}
+                </div>
+            {% endblock %}
+            <div id="footer_right">
+                {% if user.is_authenticated %}
+                    <a href="/admin/logout">logout</a>
+                {% endif %}
+                {% if user.is_authenticated and user.is_staff %}
+                    <br>
+                    <a href="{% url 'quiz:download_backup_fixtures' %}">download data backup</a> (login feature)
+                {% endif %}
+
+            </div>
+        </div>
+     </footer>
 </div>
 <!-- end .container_16 -->
 
